css/stylesheet.css
html, body {
  margin: 0;
  padding: 0;
}

/****
BASE STYLING
****/
a {
  text-decoration: none;
  color: #e8f1f2;
}

body {
  background-color: #e8f1f2;
}

/****
Landing Section
****/

.landing {
  background-position: 0 0;
  background-size: cover;
  min-height: 1000px;
  height: 100vh;
  z-index: 100;
  text-align: center;
}

.landing-image {
  display: block;
  float:left;
  clear: both;
  min-height: 1000px;
  width: 100vw;
  height: 100vh;
  background: url("../img/churchwide.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  filter:blur(2.5px);
  position: fixed;
  z-index: -1;
}

header {
    width: 100%;
    display: flex;
    max-height: 67px;
    flex-direction: column;
}


#logo {
  height: 67px;
  background-color: black;
  margin: auto;
  padding: 4px 0 4px 0;
  width: 100%;
}

#logoImage {
  display: block;
  margin: 0 auto;
  height: 100%;
}

/***
Navigation bar
***/

.navbar {
  height: 100%;
  width: 100vw;
  margin: 0 auto;
  display: none;
  background-color: black;
  width: 85vw;
}


.menuButtonContainer {
  width: 100%;
  height: 60px;
  text-align: center;
  background-color: lightblue;
}

.menuButton {
  display: inline-block;
  width: 100%;
  height: 40px;
  font-size: 1.2em;
  text-align: center;
  background: lightblue;
  color: white;
  cursor: pointer;

}

.menuButton p {
  margin: 0 auto;
  padding: 0;
  line-height: 40px;
}


.nav-list {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  margin: 0;
  list-style: none;
  text-align: center;
  margin-left: -40px;

}


.nav-item {
  background-color: #e8f1f2;
  margin: 0;
  height: 50px;
  width: 100%;
  position: relative;
  z-index: 500;
}

.nav-item a {
  color: rgba(0,0,0,.5);
  font-size: 20px;
  font-family: 'Roboto', sans-serif;
  width: 100%;
  line-height:50px;
  display: inline-block;
  white-space: nowrap;
}




/*****
Front Page
*****/
.welcome {
  text-align: center;
  height:430px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.welcomeText {
  display: flex;
  flex-direction: column;
  z-index: 101;
  margin-top: 100px;

}

.welcomeTextBlur {
  background-color: rgba(0,0,0,0.45);
  filter: blur(2px);
  margin-top: 50px;
  padding: 25px;
  position: absolute;
  height: 200px;
  width: 250px;
}

.headline {
  font-size: 60px;
  font-family: 'Roboto', sans-serif;
  color: #2f2e2e;
  text-shadow: 	#ffffff  0 0 7px;
}

#jesus {
  color: #f0efef;
  -webkit-text-stroke: 1px rgba(0,0,0,.1);
  text-shadow: rgba(255,157,0,.7) 0 0 11px;
  margin-left: 20px;
  margin-right: 20px;
}

.btn {
  margin: 10px;
  display: inline-block;
}

.btn a {
  font-size: 20px;
  min-width: 168px;
  display: block;
  font-family: 'Roboto', sans-serif;
  background-color: rgba(255,157,0,.7);
  padding: 16px 28px;
  border: 2px solid white;
  text-shadow: #1c1b1b 1px 0 8px;
}

#nwsltrButton a {
  background-color: #8be9fd;
}

#newButton {
  margin-top: 30px;
}

.buttonDiv {
  margin-top: 38px;
  margin-bottom: -44px;
  width
}

/*****
Basic Section Styling
*****/
.color-back {
  min-height: 800px;
  font-size: 35px;
  padding-top: 1px;
  padding-bottom: 25px;
  display: flex;
  color: #001a23;
  background-color: #f9f2ec;
  font-family: 'Roboto', sans-serif;
}


.img-back {
  display: flex;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  font-size: 35px;
  color: #e8f1f2;
  font-family: 'Roboto', sans-serif;
  position: relative;
  clear: both;
  min-height: 100vh;
}

.color-back p {
  font-size: 20px;
  color: #001a23;
}

.img-back p {
  font-size: 20px;
  color: #e8f1f2;
}

.layer /***shadow overlay for large background images***/{
  background-color: rgba(0, 26, 35, .6);
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
}

/****
Align top of section to top of view window when clicking from Navbar anchors
****/
.color-back:before {
  display: none;
  content: " ";
  height: 10px;
  visibility: hidden;
}


/*****
Content layout
*****/


.img-container {
  width: 92vw;
  min-height: 100%;
  margin: 0 auto;
  z-index: 3;
  position: relative;
}

.color-container {
  width: 92vw;
  margin: 0 auto;
  min-height: 100%;
}


.text-blocks {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
  height: inherit;
  justify-content: space-between;
  overflow: auto;
}




/*****
Beliefs
*****/

.content-block {
  width: 85%;
}

.belief-block {

}

/*****
Service Times
*****/
#services {
  background: url("../img/pews.jpeg");
  background-attachment: fixed;
  display: flex;
  min-height: 100vh;
}

.content-block {
  width: 85%;
}

.top-cut {
  float:right;
  margin: 30px 0 10px 0 ;
}

#services .img-container .top-cut {
  align-self: flex-end;
}

.info-block {
  width: 80%;
  border: 2px solid #e8f1f2;
  background: rgba(232,241,242,.4);
  color: #001a23;
  text-align: center;
  min-height: 385px;
}

.info-block p:last-child {
  padding-bottom: 30px;
}

.two-block-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.info-block h3 {
  font-size: 1.5em;
  flex-direction: column;
}

.info-block p {
  font-size: .6em;
  color: #001a23;
}

#worship-block {

}

#bible-study-block {
  margin-top: 30px;
}




/*****
Staff
*****/

.staff-container {
  margin-top: 100px;
  width: 95%;
  display: flex;
  flex-direction: column;
  margin: auto;

}
.staff-block {
  margin:auto;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: space-between;
  width:100%;
  margin-bottom: 75px;
}


.staff-photo {
  width:100%;
  margin: 0 auto;
}

.staff-bio h3 {
  text-align: center;
}

.staff-bio {
  width: 90%;
  text-align: left;
  margin:auto;
}

.staff-photo img {
  display: block;
  margin: auto;
  width:80%;
  max-width: 300px;
  min-width: 200px;
  border-radius: 15px;

}

/*****
Member FAQ
*****/

.FAQuestion {
  display: inline-block;
  font-size: .8em;
  margin: .6em 0 .6em .25em;
}

.FAQuestion:hover {
  color: #7a9e7e;
  font-size: .83em;
  transition-duration: .25s;
  cursor: pointer;
}
.FAnswer {
  margin-left: .5em;
}




/*****
Location
*****/
#location {
  background: url("../img/street.jpeg");
  background-attachment: fixed;
}

#map {
  height: 475px;
  width: 75%;
  min-height: 20px;
  min-width: 20px;
  margin: 0 auto;
}

.address {
  text-align: center;
}


/*****
Footer
*****/
.footer {
  background-color: #001a23;
  height: 100px;
  color: #e8f1f2;
  position: relative;
  margin-top: -100px;
  clear: both;
  text-align: center;
}

.footer p {
  padding-top: 2em;
  font-family: 'Roboto', sans-serif;
}




/****
Newsletter sign up modal
***/

#overlay {
  background: rgba(0,0,0,.6);
  position: fixed;
  top: 0;
  left: 0;
  display: none;
  height: 100%;
  width: 100%;
  text-align: center;
  z-index: 10;
}

#modWindow {
  display: inline-block;
  width: 100%;
  height: 400px;
  background: #e8f1f2;
  margin-top: 100px;
  left: 50%;
  margin-left: -50%;
  position: fixed;
  z-index: 11;

}

#subDiv {
  display:none;
}

#subForm h2 {
  margin-bottom: 40px;
}

.nwsInput {
  display: block;
  width: 70%;
  margin: 0 auto;
  margin-bottom: 20px;
}

.nwsLabel {
  display: block;
  width: 70%;
  text-align: left;
  margin: 0 auto;
  margin-bottom: 5px;
}

.closeX {
  display: inline-block;
  color: white;
  background: black;
  height: 23px;
  width: 23px;
}

#nwsCloseX {
  position: absolute;
  top: 0px;
  right: 0px;
  cursor: pointer;
}


#subSuccess {
  display: none;
  width: 100%;
  height: 100%;
  text-align: center;
  z-index: 10;
}

#subSubbed {
  display: none;
  width: 100%;
  height: 100%;
  text-align: center;
}



/****
MEDIA QUERIES
***/
@media screen and (min-width: 640px) {
  /****
  Landing/top section
  ***/

  header {
    width: 100%;
    max-width: 3000px;
    margin: auto;
    background-color: black;
    justify-content: space-between;
  }
  .menuButton {
    display: none;
  }

  .menuButtonContainer {
    display: none;
  }

  #logo {
    max-height: 80px;
    display: inline-block;
    float: left;
  }
  /****
  Navigation
  ***/

  .navbar {
    display: block;
    width: 100%;
    max-height: 80px;
/*    margin-top: 125px;*/

  }


  .nav-list {
    flex-direction: row;
  }

  .nav-item {
    height: 100%;
    width: 15%;
    background-color: transparent;
    text-align: center;
  }

  .nav-item a {
    line-height: inherit;
  }

  .nav-item:hover{
    background-color: gray;
  }


  .nav-item a {
    color: white;
    font-size: 1em;
    font-family: 'Roboto', sans-serif;
    padding: 23px 0 23px 0;
    width: 100%;
    white-space: nowrap;
    text-align: center;
  }

  /****
  Welcome section Text
  ***/

  .welcomeText{
    flex-direction: row;
    margin-top: 350px;

    }

    .welcome {
      height: 650px;
    }

  .welcomeTextBlur {
    margin-top: 175px;
    height: 55px;
    width: 558px;
  }
    /****
    Layout
    ***/


    .info-block h3 {
      font-size: 1.5em;
    }

    .info-block p {
      font-size: .75em;
    }

    /****
    Newsletter subscribe modal
    ***/

    #modWindow {
      width: 500px;
      height: 400px;
      margin-left: -250px;
    }

    .closeX {
      height: 23px;
      width: 23px;
      border-radius: 15px;
      border: 2px solid white;
    }

    #nwsCloseX {
      position: absolute;
      top: -7px;
      right: -7px;
      cursor: pointer;
    }
    /****
    New Video
    ***/
    .newVid {
      margin: 100px auto;
      max-width: 560px;
      max-height: 315px;
    }
    /****
    Member FAQ
    ***/
    .FAQuestion {
      font-size: 1em;
    }

    .FAQuestion:hover {
      font-size: 1.03em;
    }
}


@media screen and (min-width: 850px) {

  header {
   flex-direction: row;
  }

  #logo {
      width: 18%;
      padding:0;
  }

  .navbar {
    width: 82%;
  }

  /****
  Welcome section Text
  ***/
  .welcome {
    height: 775px;
  }

  .headline {
    font-size: 80px;
    }

  .welcomeTextBlur {
    margin-top: 0;
    height: 100px;
    width: 775px;
  }

  .welcomeText {
    margin-top: 0;
  }

  /****
  Basic Styling
  ***/

  .btn a {
    padding: 20px 35px;
    font-size: 35px;
  }

  .text-blocks   {
    flex-direction: row;
    align-content: flex-start;
  }
  .content-block {
    width: 48.5%;
  }

  .img-container, .color-container {
    width: 80vw;
  }

  .two-block-container {

    flex-direction: row;
    align-items: flex-start;
    margin-bottom:50px;
  }

  /****
  Service Times
  ****/

  #bible-study-block {
    margin-top: 0;
}
  .info-block {
    margin: 0px 30px;
    min-height: 438px;
  }

  /****
  Staff
  ****/

  .staff-block {
    flex-direction: row;
    justify-content: space-between;
  }

  .staff-block:nth-child(even) {
    flex-direction: row-reverse;
  }

  .staff-photo img {
    display: inline;
  }

  .staff-bio {
    width: 70%;
    text-align: center;
  }

  .staff-block:nth-child(even) .staff-photo {
    text-align: right;
  }

  .staff-bio h3 {
    margin: 0 0 .5em 0;
  }

  /****
  Footer
  *****/
  .footer {
    text-align: left;
  }

@media screen and (min-width: 1240px) {
  /****
  Welcome section text
  *****/
  .landing {
    min-height: 100vh;
  }

  .headline {
    font-size: 100px;
    }

  .welcomeTextBlur {
    height: 120.67px;
    width: 950px;
    }

    /****
    Navigation
    *****/

  .navbar {
    width: calc(100% - 389px);
    padding-left: 0;
    margin-top: 0;
    }

  .nav-item a {
    font-size: 110%;
  }

  .nav-item {
    width: 18%;
    height: 100%;
  }

  /****
  Basic Styling
  *****/

  .two-block-container {
    margin-bottom:90px;
  }

  /****
  Staff
  *****/

  .staff-photo {
    width: 40%;
  }

  .newVid {
    margin: 200px auto;
  }

}

